--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.15.2",
+    "ejs": "^2.5.3",
     "express": "^4.14.0",
+    "express-validator": "^3.0.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5"
   }
