--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.3",
     "express": "^4.14.0",
     "express-validator": "^3.0.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5"
   }
